--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CarFix</string>
+    <string name="app_name">mCarFix</string>
     <string name="size">20dp</string>
 </resources>
